# strata

./: .gitignore  main.py  pyproject.toml
configs/: paper.yaml
src/strata/: __main__.py
src/strata/base/: __init__.py  configs.py  context.py
src/strata/base/llm/: __init__.py  entity.py  service.py
src/strata/base/llm/adapters/: __init__.py  anthropic.py  base.py  deepseek.py  openai.py
src/strata/base/llm/clients/: __init__.py  anthropic.py  base.py  deepseek.py  openai.py
src/strata/cli/: __init__.py  paper.py
src/strata/modules/paper/: __init__.py  entities.py  models.py  service.py  utils.py
src/strata/modules/paper/export/: __init__.py  bibtex.py  citation.py
src/strata/modules/paper/sources/: __init__.py
src/strata/modules/paper/sources/zotero/: __init__.py  reader.py  storage.py
src/strata/modules/paper/store/: __init__.py  database.py  files.py  migration_001.py  migrations.py  repository.py
src/strata/modules/paper/sync/: __init__.py  watcher.py  zotero.py
src/strata/server/: __init__.py  common.py
src/strata/server/paper/: README.md  __init__.py  helpers.py
src/strata/server/paper/handlers/: __init__.py  locate.py  read.py
src/strata/server/paper/tools/: __init__.py  locate.py  read.py
