[project]
name = "strata"
version = "0.1.0"
description = "Runtime intelligence layer for personal infrastructure via MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "watchdog>=4.0",
    "openai>=1.0",
    "typer>=0.9",
    "mcp>=1.0",
    "pymupdf>=1.24",
    "punq>=0.7",
]

[project.scripts]
strata = "strata.cli:app"
